--- a/app/src/main/res/layout/activity_produtos01.xml
+++ b/app/src/main/res/layout/activity_produtos01.xml
@@ -9,9 +9,11 @@
     <ScrollView
         android:id="@+id/scrollView2"
         android:layout_width="match_parent"
-        android:layout_height="630dp"
+        android:layout_height="600dp"
         android:layout_marginStart="5dp"
         android:layout_marginEnd="5dp"
+        android:layout_marginBottom="40dp"
+        app:layout_constraintBottom_toTopOf="@+id/MCardViewNav"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -21,6 +23,18 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
+
+            <ImageView
+                android:id="@+id/imageView2"
+                android:layout_width="350dp"
+                android:layout_height="343dp"
+                android:layout_marginStart="152dp"
+                android:layout_marginBottom="132dp"
+                android:adjustViewBounds="false"
+                android:rotation="-80"
+                app:layout_constraintBottom_toTopOf="@+id/txtDiv"
+                app:layout_constraintStart_toStartOf="parent"
+                app:srcCompat="@drawable/img_cad" />
 
             <TextView
                 android:id="@+id/txtProdTitulo"
@@ -37,29 +51,64 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <ImageView
-                android:id="@+id/imageView"
+                android:id="@+id/imgProd"
                 android:layout_width="185dp"
                 android:layout_height="184dp"
-                android:layout_marginStart="25dp"
+                android:layout_marginStart="10dp"
                 android:layout_marginTop="70dp"
-                android:src="@tools:sample/avatars"
+                android:layout_marginEnd="35dp"
+                android:adjustViewBounds="true"
+                app:layout_constraintEnd_toStartOf="@+id/materialCardView21"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/txtProdTitulo" />
+                app:layout_constraintTop_toBottomOf="@+id/txtProdTitulo"
+                app:srcCompat="@drawable/rucula" />
 
             <com.google.android.material.card.MaterialCardView
                 android:id="@+id/materialCardView21"
                 android:layout_width="130dp"
                 android:layout_height="35dp"
                 android:layout_marginEnd="30dp"
+                android:layout_marginBottom="152dp"
                 app:cardBackgroundColor="@color/cadBack"
-                app:layout_constraintEnd_toEndOf="parent"
-                tools:layout_editor_absoluteY="160dp">
+                app:layout_constraintBottom_toTopOf="@+id/txtDiv"
+                app:layout_constraintEnd_toEndOf="parent">
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:background="@color/cadBack"
-                    android:orientation="horizontal"></LinearLayout>
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/txtSubtrair"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:gravity="center"
+                        android:text="@string/strSubtrair"
+                        android:textSize="16sp"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/txtQtd"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:gravity="center"
+                        android:text="@string/strQtd"
+                        android:textSize="16sp"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/txtSomar"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:gravity="center"
+                        android:text="@string/strSomar"
+                        android:textSize="16sp"
+                        android:textStyle="bold" />
+                </LinearLayout>
             </com.google.android.material.card.MaterialCardView>
 
             <TextView
@@ -93,7 +142,7 @@
                 android:textColor="@color/entradaDados"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/imageView" />
+                app:layout_constraintTop_toBottomOf="@+id/imgProd" />
 
             <TextView
                 android:id="@+id/txtRucula"
@@ -111,9 +160,9 @@
                 android:id="@+id/txtDescRucula"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="10dp"
+                android:layout_marginStart="19dp"
                 android:layout_marginTop="20dp"
-                android:layout_marginEnd="10dp"
+                android:layout_marginEnd="19dp"
                 android:text="@string/strDescRucula"
                 android:textSize="18sp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -125,11 +174,13 @@
                 android:id="@+id/btnCarrinho"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="40dp"
+                android:layout_marginTop="30dp"
                 android:layout_marginEnd="30dp"
+                android:layout_marginBottom="10dp"
                 android:backgroundTint="@color/buttons"
                 android:text="Carrinho"
                 android:textSize="16sp"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/txtDescRucula" />
 
@@ -142,22 +193,42 @@
         android:layout_width="match_parent"
         android:layout_height="70dp"
         android:layout_marginStart="50dp"
-        android:layout_marginTop="10dp"
         android:layout_marginEnd="50dp"
-        android:layout_marginBottom="10dp"
+        android:layout_marginBottom="20dp"
         android:background="@color/lightBack"
         android:backgroundTint="@color/lightBack"
         app:cardBackgroundColor="@color/lightBack"
         app:cardCornerRadius="40dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/scrollView2">
+        app:layout_constraintStart_toStartOf="parent">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/lightBack"
-            android:orientation="horizontal"></LinearLayout>
+            android:orientation="horizontal">
+
+            <ImageButton
+                android:id="@+id/imageButton2"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:src="@android:drawable/btn_star" />
+
+            <ImageButton
+                android:id="@+id/imageButton"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:src="@android:drawable/btn_star" />
+
+            <ImageButton
+                android:id="@+id/imageButton3"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:src="@android:drawable/btn_star" />
+        </LinearLayout>
     </com.google.android.material.card.MaterialCardView>
 </androidx.constraintlayout.widget.ConstraintLayout>
