--- a/app/src/main/res/layout/activity_produtos01.xml
+++ b/app/src/main/res/layout/activity_produtos01.xml
@@ -210,21 +210,21 @@
             android:orientation="horizontal">
 
             <ImageButton
-                android:id="@+id/imageButton2"
+                android:id="@+id/btnNavCarrinho"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:src="@android:drawable/btn_star" />
 
             <ImageButton
-                android:id="@+id/imageButton"
+                android:id="@+id/btnNavMain"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:src="@android:drawable/btn_star" />
 
             <ImageButton
-                android:id="@+id/imageButton3"
+                android:id="@+id/btnNavPerfil"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
