--- a/app/src/main/res/layout/activity_produtos01.xml
+++ b/app/src/main/res/layout/activity_produtos01.xml
@@ -214,21 +214,28 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:src="@android:drawable/btn_star" />
+                android:contentDescription="no"
+                android:backgroundTint="@color/lightBack"
+                android:src="@drawable/carrinho_icon" />
 
             <ImageButton
                 android:id="@+id/btnNavMain"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:src="@android:drawable/btn_star" />
+                android:contentDescription="no"
+                android:backgroundTint="@color/lightBack"
+                android:src="@drawable/home_icon" />
 
             <ImageButton
                 android:id="@+id/btnNavPerfil"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:src="@android:drawable/btn_star" />
+                android:contentDescription="no"
+                android:backgroundTint="@color/lightBack"
+                android:onClick="clickPerfil"
+                android:src="@drawable/user_icon" />
         </LinearLayout>
     </com.google.android.material.card.MaterialCardView>
 </androidx.constraintlayout.widget.ConstraintLayout>
