--- a/app/src/main/res/layout/activity_cadastro2.xml
+++ b/app/src/main/res/layout/activity_cadastro2.xml
@@ -58,7 +58,7 @@
                 app:srcCompat="@drawable/img_cad" />
 
             <com.google.android.material.card.MaterialCardView
-                android:id="@+id/materialCardView12"
+                android:id="@+id/mCardViewPass"
                 android:layout_width="match_parent"
                 android:layout_height="48dp"
                 android:layout_marginStart="20dp"
@@ -90,7 +90,7 @@
                 app:cardBackgroundColor="@color/entradaDados"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/materialCardView12">
+                app:layout_constraintTop_toBottomOf="@+id/mCardViewPass">
 
                 <EditText
                     android:id="@+id/editPass"
@@ -140,7 +140,7 @@
         app:layout_constraintBottom_toBottomOf="parent">
 
         <Button
-            android:id="@+id/btnVoltar"
+            android:id="@+id/btnCadastro"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
@@ -155,7 +155,7 @@
             android:textSize="18sp" />
 
         <Button
-            android:id="@+id/btnProx"
+            android:id="@+id/btnEsqPass"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="50dp"
