--- a/app/src/main/res/layout/activity_esqueci_senha.xml
+++ b/app/src/main/res/layout/activity_esqueci_senha.xml
@@ -114,7 +114,7 @@
                 android:layout_width="220dp"
                 android:layout_height="55dp"
                 android:layout_marginBottom="80dp"
-                android:onClick="clickSalvarPass"
+                android:onClick="clickSalvarAlt"
                 android:text="@string/strSalvarAlt"
                 android:textSize="20sp"
                 app:layout_constraintBottom_toBottomOf="parent"
