--- a/app/src/main/res/layout/activity_market.xml
+++ b/app/src/main/res/layout/activity_market.xml
@@ -19,9 +19,9 @@
 
         <com.google.android.material.card.MaterialCardView
             android:id="@+id/mCardViewAlfC"
-            android:layout_width="145dp"
-            android:layout_height="168dp"
-            android:layout_marginTop="143dp"
+            android:layout_width="174dp"
+            android:layout_height="236dp"
+            android:layout_marginTop="123dp"
             app:cardCornerRadius="15dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -32,13 +32,94 @@
                 android:layout_height="match_parent"
                 tools:layout_editor_absoluteX="66dp"
                 tools:layout_editor_absoluteY="213dp">
+
+                <ImageView
+                    android:id="@+id/imageViewAlfC"
+                    android:layout_width="116dp"
+                    android:layout_height="123dp"
+                    android:layout_marginTop="10dp"
+                    android:src="@tools:sample/avatars"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    tools:srcCompat="@drawable/alface_crespa" />
+
+                <TextView
+                    android:id="@+id/txtAlfC"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/strDescAlfaceC"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/imageViewAlfC" />
+
+                <TextView
+                    android:id="@+id/txtValorAlfC"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
+                    android:text="R$ 1,99"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/txtAlfC" />
+
+                <com.google.android.material.card.MaterialCardView
+                    android:id="@+id/materialCardViewAdd3"
+                    android:layout_width="150dp"
+                    android:layout_height="48dp"
+                    app:cardBackgroundColor="@color/cadBack"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/txtValorAlfC">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:background="@color/cadBack"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:id="@+id/txtSubtrair3"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:layout_weight="1"
+                            android:gravity="center"
+                            android:onClick="clickSub"
+                            android:text="@string/strSubtrair"
+                            android:textSize="16sp"
+                            android:textStyle="bold" />
+
+                        <TextView
+                            android:id="@+id/txtQtd3"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:layout_weight="1"
+                            android:gravity="center"
+                            android:text="@string/strQtd"
+                            android:textSize="16sp"
+                            android:textStyle="bold" />
+
+                        <TextView
+                            android:id="@+id/txtSomar3"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:layout_weight="1"
+                            android:gravity="center"
+                            android:onClick="clickSomar"
+                            android:text="@string/strSomar"
+                            android:textSize="16sp"
+                            android:textStyle="bold" />
+                    </LinearLayout>
+                </com.google.android.material.card.MaterialCardView>
+            </androidx.constraintlayout.widget.ConstraintLayout>
         </com.google.android.material.card.MaterialCardView>
 
         <com.google.android.material.card.MaterialCardView
             android:id="@+id/mCardViewRepV"
-            android:layout_width="145dp"
-            android:layout_height="168dp"
-            android:layout_marginTop="50dp"
+            android:layout_width="174dp"
+            android:layout_height="236dp"
+            android:layout_marginTop="30dp"
             app:cardCornerRadius="15dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -49,6 +130,87 @@
                 android:layout_height="match_parent"
                 tools:layout_editor_absoluteX="66dp"
                 tools:layout_editor_absoluteY="213dp">
+
+                <ImageView
+                    android:id="@+id/imageViewRepV"
+                    android:layout_width="116dp"
+                    android:layout_height="123dp"
+                    android:layout_marginTop="10dp"
+                    android:src="@tools:sample/avatars"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    tools:srcCompat="@drawable/rucula" />
+
+                <TextView
+                    android:id="@+id/txtRepV"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/strDescRepolhoVTitulo"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/imageViewRepV" />
+
+                <TextView
+                    android:id="@+id/txtValRepV"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
+                    android:text="R$ 4,99"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/txtRepV" />
+
+                <com.google.android.material.card.MaterialCardView
+                    android:id="@+id/materialCardViewAdd4"
+                    android:layout_width="150dp"
+                    android:layout_height="48dp"
+                    app:cardBackgroundColor="@color/cadBack"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/txtValRepV">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:background="@color/cadBack"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:id="@+id/txtSubtrair4"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:layout_weight="1"
+                            android:gravity="center"
+                            android:onClick="clickSub"
+                            android:text="@string/strSubtrair"
+                            android:textSize="16sp"
+                            android:textStyle="bold" />
+
+                        <TextView
+                            android:id="@+id/txtQtd4"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:layout_weight="1"
+                            android:gravity="center"
+                            android:text="@string/strQtd"
+                            android:textSize="16sp"
+                            android:textStyle="bold" />
+
+                        <TextView
+                            android:id="@+id/txtSomar4"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:layout_weight="1"
+                            android:gravity="center"
+                            android:onClick="clickSomar"
+                            android:text="@string/strSomar"
+                            android:textSize="16sp"
+                            android:textStyle="bold" />
+                    </LinearLayout>
+                </com.google.android.material.card.MaterialCardView>
+            </androidx.constraintlayout.widget.ConstraintLayout>
         </com.google.android.material.card.MaterialCardView>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -69,9 +231,9 @@
 
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/mCardViewRuc"
-        android:layout_width="145dp"
-        android:layout_height="168dp"
-        android:layout_marginTop="70dp"
+        android:layout_width="174dp"
+        android:layout_height="236dp"
+        android:layout_marginTop="50dp"
         app:cardCornerRadius="15dp"
         app:layout_constraintEnd_toStartOf="@+id/constraintLayout"
         app:layout_constraintStart_toStartOf="parent"
@@ -82,13 +244,94 @@
             android:layout_height="match_parent"
             tools:layout_editor_absoluteX="66dp"
             tools:layout_editor_absoluteY="213dp">
+
+            <ImageView
+                android:id="@+id/imageView2"
+                android:layout_width="116dp"
+                android:layout_height="123dp"
+                android:layout_marginTop="10dp"
+                android:src="@tools:sample/avatars"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:srcCompat="@drawable/rucula" />
+
+            <TextView
+                android:id="@+id/txtRuc"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/strDescRuculaTitulo"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/imageView2" />
+
+            <TextView
+                android:id="@+id/txtValRuc"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:text="R$ 4,99"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/txtRuc" />
+
+            <com.google.android.material.card.MaterialCardView
+                android:id="@+id/materialCardViewAdd1"
+                android:layout_width="150dp"
+                android:layout_height="48dp"
+                app:cardBackgroundColor="@color/cadBack"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/txtValRuc">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@color/cadBack"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/txtSubtrair1"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:gravity="center"
+                        android:onClick="clickSub"
+                        android:text="@string/strSubtrair"
+                        android:textSize="16sp"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/txtQtd1"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:gravity="center"
+                        android:text="@string/strQtd"
+                        android:textSize="16sp"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/txtSomar1"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:gravity="center"
+                        android:onClick="clickSomar"
+                        android:text="@string/strSomar"
+                        android:textSize="16sp"
+                        android:textStyle="bold" />
+                </LinearLayout>
+            </com.google.android.material.card.MaterialCardView>
+        </androidx.constraintlayout.widget.ConstraintLayout>
     </com.google.android.material.card.MaterialCardView>
 
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/mCardViewAlfL"
-        android:layout_width="145dp"
-        android:layout_height="168dp"
-        android:layout_marginTop="50dp"
+        android:layout_width="174dp"
+        android:layout_height="236dp"
+        android:layout_marginTop="30dp"
         app:cardCornerRadius="15dp"
         app:layout_constraintEnd_toStartOf="@+id/constraintLayout"
         app:layout_constraintStart_toStartOf="parent"
@@ -99,6 +342,87 @@
             android:layout_height="match_parent"
             tools:layout_editor_absoluteX="66dp"
             tools:layout_editor_absoluteY="213dp">
+
+            <ImageView
+                android:id="@+id/imageView3"
+                android:layout_width="116dp"
+                android:layout_height="123dp"
+                android:layout_marginTop="10dp"
+                android:src="@tools:sample/avatars"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:srcCompat="@drawable/alface_lisa" />
+
+            <TextView
+                android:id="@+id/txtAlfL"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/strDescAlfaceLTitulo"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/imageView3" />
+
+            <TextView
+                android:id="@+id/textView3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:text="R$ 1,49"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/txtAlfL" />
+
+            <com.google.android.material.card.MaterialCardView
+                android:id="@+id/materialCardViewAdd2"
+                android:layout_width="150dp"
+                android:layout_height="48dp"
+                app:cardBackgroundColor="@color/cadBack"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textView3">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@color/cadBack"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/txtSubtrair2"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:gravity="center"
+                        android:onClick="clickSub"
+                        android:text="@string/strSubtrair"
+                        android:textSize="16sp"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/txtQtd2"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:gravity="center"
+                        android:text="@string/strQtd"
+                        android:textSize="16sp"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/txtSomar2"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:gravity="center"
+                        android:onClick="clickSomar"
+                        android:text="@string/strSomar"
+                        android:textSize="16sp"
+                        android:textStyle="bold" />
+                </LinearLayout>
+            </com.google.android.material.card.MaterialCardView>
+        </androidx.constraintlayout.widget.ConstraintLayout>
     </com.google.android.material.card.MaterialCardView>
 
     <com.google.android.material.card.MaterialCardView
