--- a/app/src/main/res/layout/activity_produtoalfacec.xml
+++ b/app/src/main/res/layout/activity_produtoalfacec.xml
@@ -58,13 +58,13 @@
                 android:layout_marginTop="70dp"
                 android:layout_marginEnd="35dp"
                 android:adjustViewBounds="true"
-                app:layout_constraintEnd_toStartOf="@+id/materialCardView21"
+                app:layout_constraintEnd_toStartOf="@+id/materialCardViewAdd1"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/txtProdTitulo"
                 app:srcCompat="@drawable/alface_crespa" />
 
             <com.google.android.material.card.MaterialCardView
-                android:id="@+id/materialCardView21"
+                android:id="@+id/materialCardViewAdd1"
                 android:layout_width="145dp"
                 android:layout_height="48dp"
                 android:layout_marginEnd="30dp"
@@ -80,7 +80,7 @@
                     android:orientation="horizontal">
 
                     <TextView
-                        android:id="@+id/txtSubtrair"
+                        android:id="@+id/txtSubtrair1"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
@@ -122,7 +122,7 @@
                 android:text="@string/strReais"
                 android:textSize="18sp"
                 app:layout_constraintEnd_toStartOf="@+id/txtValor"
-                app:layout_constraintTop_toBottomOf="@+id/materialCardView21" />
+                app:layout_constraintTop_toBottomOf="@+id/materialCardViewAdd1" />
 
             <TextView
                 android:id="@+id/txtValor"
@@ -133,7 +133,7 @@
                 android:text="@string/strValorAlfaceCrespo"
                 android:textSize="18sp"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/materialCardView21" />
+                app:layout_constraintTop_toBottomOf="@+id/materialCardViewAdd1" />
 
             <TextView
                 android:id="@+id/txtDiv"
@@ -180,6 +180,7 @@
                 android:layout_marginEnd="30dp"
                 android:layout_marginBottom="10dp"
                 android:backgroundTint="@color/buttons"
+                android:onClick="clickCar"
                 android:text="Carrinho"
                 android:textSize="16sp"
                 app:layout_constraintBottom_toBottomOf="parent"
